tests/fixtures/valid/return_text_literal.torel
unit fixtures.return_text_literal;

export proc main() -> Text {
    return "hello";
}
