tests/fixtures/invalid/unknown_local.torel
unit fixtures.unknown_local;

export proc main() -> Int32 {
    return answer;
}
